scrollbar fix

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -89,13 +89,14 @@ body {
 }
 
 .slider-scrollbar-thumb ::-webkit-scrollbar-track {
-  background: #8fe086;
+  background: #eef7f0;
+  border-radius: 10px;
 }
 
 .slider-scrollbar-thumb ::-webkit-scrollbar-thumb {
   background: var(--primary-green);
   border-radius: 10px;
-  border: 2px solid var(--gray-400);
+  border: none;
 }
 
 .slider-scrollbar-thumb ::-webkit-scrollbar-thumb:hover {
